@@ -1,3 +1,7 @@
+Tue Jun 27 2000 Nalin Dahyabhai <nalin@redhat.com>
+- Integrate Seth Vidal's "no_user_check" argument, so that non-privileged
+  users (i.e., secure web servers) can also do checks.
+
 Wed May 17 2000 Nalin Dahyabhai <nalin@redhat.com>
 - Make errors chown()ing ccache files non-fatal if (getuid() != 0), suggested
   by Steve Langasek.
